Sync www directory

--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,15 @@
 		<title>Pokanalysis</title>
 		<link rel="icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" type="text/css" href="http://ubitux.fr/style.css" />
+		<style type="text/css">li { background-image:url('favicon.png'); padding-left: 20px; background-repeat: no-repeat; list-style-type: none; }</style>
 	</head>
 	<body>
 		<h1>Pokanalysis</h1>
 		<p>
-			Pokanalysis analyses first generation Pokémons ROM… At
-			least Red and Blue… US. ☺
+			<strong>Pokanalysis</strong> analyses first generation Pokémon
+			ROMS… At least <strong><span style="color:#FF4040">Red</span></strong> and
+			<strong><span style="color:#4040FF">Blue</span></strong>…
+			<em>US</em>. ☺
 		</p>
 		<p>
 			It's a totally useless application (unless you are just
@@ -32,6 +35,24 @@
 			<a href="shots/viridian_city.png"><img src="shots/mini_viridian_city.png" alt="Viridian city" /></a>
 			<a href="shots/safari_wild_pkmn.png"><img src="shots/mini_safari_wild_pkmn.png" alt="Safari Wild Pokémons" /></a>
 		</p>
+
+		<h2>Current features</h2>
+		<ul>
+			<li>Main game area (Kanto) with merged or split maps</li>
+			<li>Houses, cave, etc. maps</li>
+			<li>Entering maps by clicking on warps/doors</li>
+			<li>Wild pokémons with their names</li>
+			<li>Text of most of the signs</li>
+			<li>Special items (hidden objects for example)</li>
+			<li>Entities (people, trainers, items) and their default orientation</li>
+		</ul>
+		<p>And also:</p>
+		<ul>
+			<li>A lot of bugs</li>
+			<li>A lot of incomplete features</li>
+			<li>A lot of missing features</li>
+			<li>A lot of unsupported ROMS</li>
+		</ul>
 
 		<h2>Dependencies</h2>
 		<ul>
@@ -65,6 +86,18 @@
 		<p><a href="http://www.gnu.org/licenses/gpl.html">GPL v3</a>.</p>
 
 		<h2>TODO ideas</h2>
-		<p>I'm too lazy to enumerate the whole list…</p>
+		<ul>
+			<li>Map names</li>
+			<li>Special items text and type</li>
+			<li>Support more text (entities, special signs, …)</li>
+			<li>Sprite extraction</li>
+			<li>Trainers pokemons</li>
+			<li>Pokémons information (stats, evolutions, …)</li>
+			<li>More ROMS support (better addresses support)</li>
+			<li>Collisions</li>
+			<li>Search engine (wild pokémons, items, …)</li>
+			<li>Better GUI (treeview autofocus, previous/next, …)</li>
+			<li>Editor?</li>
+		</ul>
 	</body>
 </html>
