Prepare web release

--- a/www/index.html
+++ b/www/index.html
@@ -25,15 +25,15 @@
 			Also, you won't find any ROM here.
 		</p>
 		<ul>
-			<li><a href="releases/pokanalysis-0.1.0.tar.gz">Get Pokanalysis 0.1.0</a> (4 Jul 2010)</li>
+			<li><a href="releases/pokanalysis-0.2.0.tar.gz">Get Pokanalysis 0.2.0</a> (18 Jul 2010)</li>
 			<li><a href="Changelog">View Changelog</a></li>
 		</ul>
 
 		<h2>Screenshots</h2>
 		<p style="text-align: center;">
 			<a href="shots/cerulean_city.png"><img src="shots/mini_cerulean_city.png" alt="Cerulean City" /></a>
-			<a href="shots/viridian_city.png"><img src="shots/mini_viridian_city.png" alt="Viridian city" /></a>
 			<a href="shots/safari_wild_pkmn.png"><img src="shots/mini_safari_wild_pkmn.png" alt="Safari Wild Pokémons" /></a>
+			<a href="shots/viridian_city.png"><img src="shots/mini_viridian_city.png" alt="Viridian city" /></a>
 		</p>
 
 		<h2>Current features</h2>
@@ -41,7 +41,7 @@
 			<li>Main game area (Kanto) with merged or split maps</li>
 			<li>Houses, cave, etc. maps</li>
 			<li>Entering maps by clicking on warps/doors</li>
-			<li>Wild pokémons with their names</li>
+			<li>Wild pokémons with their names and sprites</li>
 			<li>Text of most of the signs</li>
 			<li>Special items (hidden objects for example)</li>
 			<li>Entities (people, trainers, items) and their default orientation</li>
@@ -90,7 +90,6 @@
 			<li>Map names</li>
 			<li>Special items text and type</li>
 			<li>Support more text (entities, special signs, …)</li>
-			<li>Sprite extraction</li>
 			<li>Trainers pokemons</li>
 			<li>Pokémons information (stats, evolutions, …)</li>
 			<li>More ROMS support (better addresses support)</li>
