--- a/www/index.html
+++ b/www/index.html
@@ -56,10 +56,10 @@
 
 		<h2>Dependencies</h2>
 		<ul>
-			<li>python &gt;= 2.5</li>
+			<li>Python &gt;= 2.5</li>
 			<li>PyGTK</li>
-			<li>cmake (build only)</li>
-			<li>gcc (build only)</li>
+			<li>CMake (build only)</li>
+			<li>GCC (build only)</li>
 		</ul>
 
 		<h2>How to build & use</h2>
@@ -90,7 +90,7 @@
 			<li>Map names</li>
 			<li>Special items text and type</li>
 			<li>Support more text (entities, special signs, …)</li>
-			<li>Trainers pokemons</li>
+			<li>Trainers pokémons</li>
 			<li>Pokémons information (stats, evolutions, …)</li>
 			<li>More ROMS support (better addresses support)</li>
 			<li>Collisions</li>
