--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
 			(<i>ubitux</i>, on <i>jabber.fr</i>), or IRC (see you
 			on <i>freenode</i>).
 		</p>
-		<p>Feel free to send patches, docs and kisses ♥</p>
+		<p>Feel free to send patches, docs and kisses ❤</p>
 
 		<h2>License</h2>
 		<p><a href="http://www.gnu.org/licenses/gpl.html">GPL v3</a>.</p>
