--- a/www/index.html
+++ b/www/index.html
@@ -25,19 +25,23 @@
 			Also, you won't find any ROM here.
 		</p>
 		<ul>
-			<li><a href="releases/pokanalysis-0.2.0.tar.gz">Get Pokanalysis 0.2.0</a> (18 Jul 2010)</li>
+			<li><a href="releases/pokanalysis-0.3.0.tar.gz">Get Pokanalysis 0.3.0</a> (28 Aug 2010)</li>
 			<li><a href="Changelog">View Changelog</a></li>
 		</ul>
 
 		<h2>Screenshots</h2>
 		<p style="text-align: center;">
-			<a href="shots/cerulean_city.png"><img src="shots/mini_cerulean_city.png" alt="Cerulean City" /></a>
-			<a href="shots/safari_wild_pkmn.png"><img src="shots/mini_safari_wild_pkmn.png" alt="Safari Wild Pokémons" /></a>
-			<a href="shots/viridian_city.png"><img src="shots/mini_viridian_city.png" alt="Viridian city" /></a>
+			<a href="shots/pokedex-sandshrew.png"><img src="shots/small_pokedex-sandshrew.png" alt="Pokédex (Sandshrew)" /></a>
+			<a href="shots/area-cerulean.png"><img src="shots/small_area-cerulean.png" alt="Area (Cerulean city)" /></a>
+			<a href="shots/viridian-city.png"><img src="shots/small_viridian-city.png" alt="Viridian city" /></a>
+			<a href="shots/safari-wild-pkmn.png"><img src="shots/small_safari-wild-pkmn.png" alt="Wild Pokémon in Safari" /></a>
+			<a href="shots/disasm-pallet-script.png"><img src="shots/small_disasm-pallet-script.png" alt="Disassembler (Pallet town script)" /></a>
 		</p>
 
 		<h2>Current features</h2>
 		<ul>
+			<li>Pokédex with a few information about Pokémon</li>
+			<li>Basic disassembler</li>
 			<li>Main game area (Kanto) with merged or split maps</li>
 			<li>Interior maps (houses, caves, etc.)</li>
 			<li>Entering maps by clicking on warps/doors</li>
@@ -57,7 +61,7 @@
 		<h2>Dependencies</h2>
 		<ul>
 			<li>Python &gt;= 2.5</li>
-			<li>PyGTK (GTK+ >= 2.16)</li>
+			<li>PyGTK (GTK+ &gt;= 2.16)</li>
 			<li>CMake (build only)</li>
 			<li>GCC (build only)</li>
 		</ul>
@@ -80,7 +84,7 @@
 			(<i>ubitux</i>, on <i>jabber.fr</i>), or IRC (see you
 			on <i>freenode</i>).
 		</p>
-		<p>Feel free to send patches, docs and kisses ❤</p>
+		<p>Feel free to send patches, docs and kisses <span style="color: magenta">❤</span></p>
 
 		<h2>License</h2>
 		<p><a href="http://www.gnu.org/licenses/gpl.html">GPL v3</a>.</p>
@@ -91,12 +95,11 @@
 			<li>Special items text and type</li>
 			<li>Support more text (entities, special signs, …)</li>
 			<li>Trainers pokémons</li>
-			<li>Pokémons information (stats, evolutions, …)</li>
+			<li>More Pokémons information in Pokédex</li>
 			<li>More ROMS support (better addresses support)</li>
-			<li>Disassembler in order to see map scripts</li>
 			<li>Collisions</li>
 			<li>Search engine (wild pokémons, items, …)</li>
-			<li>Better GUI (treeview autofocus, previous/next, …)</li>
+			<li>Better maps GUI (previous/next, area position…)</li>
 			<li>Editor?</li>
 		</ul>
 	</body>
