Pokémon term is invariable and need capitalization

--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
 			<li>Main game area (Kanto) with merged or split maps</li>
 			<li>Interior maps (houses, caves, etc.)</li>
 			<li>Entering maps by clicking on warps/doors</li>
-			<li>Wild pokémons with their names and sprites</li>
+			<li>Wild Pokémon with their names and sprites</li>
 			<li>Text of most of the signs</li>
 			<li>Special items (hidden objects for example)</li>
 			<li>Entities (people, trainers, items) and their default orientation</li>
@@ -94,11 +94,11 @@
 			<li>Map names</li>
 			<li>Special items text and type</li>
 			<li>Support more text (entities, special signs, …)</li>
-			<li>Trainers pokémons</li>
-			<li>More Pokémons information in Pokédex</li>
+			<li>Trainers Pokémon</li>
+			<li>More Pokémon information in Pokédex</li>
 			<li>More ROMS support (better addresses support)</li>
 			<li>Collisions</li>
-			<li>Search engine (wild pokémons, items, …)</li>
+			<li>Search engine (wild Pokémon, items, …)</li>
 			<li>Better maps GUI (previous/next, area position…)</li>
 			<li>Editor?</li>
 		</ul>
