--- a/www/index.html
+++ b/www/index.html
@@ -78,13 +78,19 @@
 % ./pokanalysis /path/to/your/pokemon/rom.gb
 </pre>
 
-		<h2>Contact developer</h2>
+		<h2>Developers</h2>
 		<p>
 			The best way to contact me directly is to use jabber
-			(<i>ubitux</i>, on <i>jabber.fr</i>), or IRC (see you
-			on <i>freenode</i>).
+			(<i>u</i>, at <i>pkh.me</i>), or <i>ubitux</i> on IRC
+			(see you on <a href="http://freenode.net/">freenode</a>,
+			or <a href="http://darkmyst.org/">darkmyst</a>).
 		</p>
-		<p>Feel free to send patches, docs and kisses <span style="color: magenta">❤</span></p>
+		<p>
+			Latest project source tree is available at
+			<a href="http://github.com/ubitux/pokanalysis">Github</a>.
+			Feel free to send patches, docs and kisses
+			<span style="color:magenta">❤</span>
+		</p>
 
 		<h2>License</h2>
 		<p><a href="http://www.gnu.org/licenses/gpl.html">GPL v3</a>.</p>
