--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 			Also, you won't find any ROM here.
 		</p>
 		<ul>
-			<li><a href="releases/pokanalysis-0.4.0.tar.gz">Get Pokanalysis 0.4.0</a> (11 Sep 2010)</li>
+			<li><a href="releases/pokanalysis-0.5.0.tar.gz">Get Pokanalysis 0.5.0</a> (22 Sep 2010)</li>
 			<li><a href="Changelog">View Changelog</a></li>
 		</ul>
 
@@ -40,7 +40,7 @@
 
 		<h2>Current features</h2>
 		<ul>
-			<li>Pokédex with a few information about Pokémon</li>
+			<li>Complete Pokédex</li>
 			<li>Basic disassembler</li>
 			<li>Main game area (Kanto) with merged or split maps</li>
 			<li>Interior maps (houses, caves, etc.)</li>
@@ -101,7 +101,6 @@
 			<li>Special items text and type</li>
 			<li>Support more text (entities, special signs, …)</li>
 			<li>Trainers Pokémon</li>
-			<li>More Pokémon information in Pokédex</li>
 			<li>More ROMS support (better addresses support)</li>
 			<li>Collisions</li>
 			<li>Search engine (wild Pokémon, items, …)</li>
