--- a/www/index.html
+++ b/www/index.html
@@ -70,11 +70,7 @@
 <pre>
 % tar -zxf pokanalysis-*.tar.gz
 % cd pokanalysis-*
-% mkdir build
-% cd build
-% cmake ..
-% cd ..
-% make -C build
+% make
 % ./pokanalysis /path/to/your/pokemon/rom.gb
 </pre>
 
