--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
 % tar -zxf pokanalysis-*.tar.gz
 % cd pokanalysis-*
 % python setup.py build_ext --inplace
-% ./pokanalysis /path/to/your/pokemon/rom.gb
+% ./pokanalysis.py /path/to/your/pokemon/rom.gb
 </pre>
 
 		<h2>Developers</h2>
