--- a/www/index.html
+++ b/www/index.html
@@ -77,8 +77,7 @@
 		<p>
 			The best way to contact me directly is to use jabber
 			(<i>u</i>, at <i>pkh.me</i>), or <i>ubitux</i> on IRC
-			(see you on <a href="http://freenode.net/">freenode</a>,
-			or <a href="http://darkmyst.org/">darkmyst</a>).
+			(see you on <a href="http://freenode.net/">freenode</a>)
 		</p>
 		<p>
 			Latest project source tree is available at
