--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 			Also, you won't find any ROM here.
 		</p>
 		<ul>
-			<li><a href="releases/pokanalysis-0.6.0.tar.gz">Get Pokanalysis 0.6.0</a> (31 Mar 2011)</li>
+			<li><a href="releases/pokanalysis-0.7.0.tar.gz">Get Pokanalysis 0.7.0</a> (6 Oct 2011)</li>
 			<li><a href="Changelog">View Changelog</a></li>
 		</ul>
 
@@ -35,6 +35,7 @@
 			<a href="shots/area-cerulean.png"><img src="shots/small_area-cerulean.png" alt="Area (Cerulean city)" /></a>
 			<a href="shots/viridian-city.png"><img src="shots/small_viridian-city.png" alt="Viridian city" /></a>
 			<a href="shots/safari-wild-pkmn.png"><img src="shots/small_safari-wild-pkmn.png" alt="Wild Pokémon in Safari" /></a>
+			<a href="shots/trainers-erika.png"><img src="shots/small_trainers-erika.png" alt="Erika trainer" /></a>
 			<a href="shots/disasm-pallet-script.png"><img src="shots/small_disasm-pallet-script.png" alt="Disassembler (Pallet town script)" /></a>
 		</p>
 
@@ -49,6 +50,7 @@
 			<li>Text of most of the signs</li>
 			<li>Special items (hidden objects for example)</li>
 			<li>Entities (people, trainers, items) and their default orientation</li>
+			<li>Trainers list and teams</li>
 		</ul>
 		<p>And also:</p>
 		<ul>
@@ -69,7 +71,7 @@
 <pre>
 % tar -zxf pokanalysis-*.tar.gz
 % cd pokanalysis-*
-% python setup.py build_ext --inplace
+% make
 % ./pokanalysis.py /path/to/your/pokemon/rom.gb
 </pre>
 
@@ -94,7 +96,6 @@
 			<li>Map names</li>
 			<li>Special items text and type</li>
 			<li>Support more text (entities, special signs, …)</li>
-			<li>Trainers Pokémon</li>
 			<li>More ROMS support (better addresses support)</li>
 			<li>Collisions</li>
 			<li>Search engine (wild Pokémon, items, …)</li>
