Relicense project to the more permissive ISC license.
https://en.wikipedia.org/wiki/ISC_license
http://www.isc.org/software/license

--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,7 @@
 		</p>
 
 		<h2>License</h2>
-		<p><a href="http://www.gnu.org/licenses/gpl.html">GPL v3</a>.</p>
+		<p><a href="http://www.isc.org/software/license">ISC</a>.</p>
 
 		<h2 id="TODO">TODO ideas</h2>
 		<ul>
