www: add favicon reference

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Pokanalysis</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="icon" type="image/png" href="favicon.ico" />
   <script src="index.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
